<?xml version="1.0"?>
<package>
  <name>dynamixel_custom_controller</name>
  <version>0.0.1</version>
  <description>The dynamixel_custom_controller package</description>

  <maintainer email="aytackahveci93@gmail.com">Aytac Kahveci</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>tf</run_depend>

  <run_depend>control_toolbox</run_depend>
  <build_depend>control_toolbox</build_depend>

  <run_depend>roslib</run_depend>
  <build_depend>roslib</build_depend>

  <build_depend>diagnostic_msgs</build_depend>
  <run_depend>diagnostic_msgs</run_depend>

  <build_depend>controller_manager</build_depend>
  <run_depend>controller_manager</run_depend>

  <build_depend>hardware_interface</build_depend>
  <run_depend>hardware_interface</run_depend>

  <build_depend>dynamixel_workbench_msgs</build_depend>
  <build_depend>dynamixel_workbench_toolbox</build_depend>

  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>dynamixel_workbench_msgs</run_depend>
  <run_depend>dynamixel_workbench_toolbox</run_depend>
  <run_depend>dynamixel_sdk</run_depend>

</package>
